Serialization: start test for STL methods

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -104,6 +104,7 @@ set(utils_tests
 	   unit/utils/RandomTest.cpp
 	   unit/utils/VectorHelpersTest.cpp
 	   unit/utils/SdrMetricsTest.cpp
+	   unit/utils/SerializationSTLTest.cpp
 	   )
 
 set(examples_files
