Cleaned up new yaml-cpp interface

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -125,9 +125,7 @@ set(ntypes_files
     htm/ntypes/BasicType.hpp
     htm/ntypes/Collection.hpp
     htm/ntypes/Dimensions.hpp
-    htm/ntypes/Value-yamlcpp.cpp
-    htm/ntypes/Value-RapidYaml.cpp
-    htm/ntypes/Value-libyaml.cpp
+    htm/ntypes/Value.cpp
     htm/ntypes/Value.hpp
 )
   
